@@ -3,6 +3,11 @@ Revision history for libev, a high-performance and full-featured event loop.
 	- linux aio backend almost complete rewritten to work around its
           limitations.
         - epoll backend now mandatory for linux aio backend.
+        - fail assertions more aggressively on invalid fd's detected
+          in the event loop, do not just silently fd_kill in case of
+          user error.
+        - ev_io_start/ev_io_stop now verify the watcher fd using
+          a syscall when EV_VERIFY is 2 or higher.
 
 4.26 (EV only)
 	- update to libecb 0x00010006.
